--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@bitrise/bitkit": "^7.1.4",
     "react": "^16.10.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.10.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -32,6 +33,7 @@
     "@types/node": "^14.14.8",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
     "@types/whatwg-fetch": "0.0.33",
     "parcel-bundler": "^1.12.4",
     "typescript": "^4.0.5"
