--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/bitrise-io/addons-insights-frontend#readme",
   "dependencies": {
     "@bitrise/bitkit": "^7.1.4",
+    "@bitrise/bitviz": "0.0.18",
+    "lodash": "^4.17.20",
     "react": "^16.10.2",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.10.2",
@@ -30,6 +32,7 @@
     "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.8",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
